// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render block button 1`] = `
<button
  className="APMButton APMButton-block"
>
  Foo
</button>
`;

exports[`Render blue button 1`] = `
<button
  className="APMButton APMButton-blue"
>
  Foo
</button>
`;

exports[`Render button with custom class 1`] = `
<button
  className="APMButton bar"
>
  Foo
</button>
`;

exports[`Render capless button 1`] = `
<button
  className="APMButton APMButton-is-capless"
>
  Foo
</button>
`;

exports[`Render default button 1`] = `
<button
  className="APMButton"
>
  Foo
</button>
`;

exports[`Render end cap left button 1`] = `
<button
  className="APMButton APMButton-end-cap-left"
>
  Foo
</button>
`;

exports[`Render end cap right button 1`] = `
<button
  className="APMButton APMButton-end-cap-right"
>
  Foo
</button>
`;

exports[`Render light blue button 1`] = `
<button
  className="APMButton APMButton-blue APMButton-light-blue"
>
  Foo
</button>
`;

exports[`Render light button 1`] = `
<button
  className="APMButton APMButton-light"
>
  Foo
</button>
`;

exports[`Render medium button 1`] = `
<button
  className="APMButton APMButton-is-medium"
>
  Foo
</button>
`;

exports[`Render mini button 1`] = `
<button
  className="APMButton APMButton-is-mini"
>
  Foo
</button>
`;

exports[`Render outline button 1`] = `
<button
  className="APMButton APMButton-outline"
>
  Foo
</button>
`;

exports[`Render outline button 2`] = `
<button
  className="APMButton APMButton-outline"
>
  Foo
</button>
`;
